tests/fixtures/invalid/pow_none_dict.py
# Cannot call pow() with None, Dict[str, int]
x = pow(None, {"a": 1})
